# gala

./: meson.build
data/: gala.gschema.xml
docs/: meson.build
plugins/tiles/: Main.vala  WorkspaceController.vala  meson.build
plugins/tiles/forest/: Node.vala
vapi/: mutter-clutter.vapi
